temporary fix for contact page whitespace

--- a/wisreactapp/public/css/style.css
+++ b/wisreactapp/public/css/style.css
@@ -843,6 +843,10 @@ img {
 }
 
 /* Contact Section */
+.contact-container {
+  height: 90vh;
+}
+
 #contact {
   padding: 100px 0 60px;
   width: 100%;
